--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -481,8 +481,8 @@
     <None Include="Assets\Water\fetchWaveData.shader" />
     <None Include="Assets\Water\fetchWaveDataMirror.shader" />
     <None Include="Assets\Water\wave.shader" />
-    <None Include="Assets\materials\BehindTheWall.shader" />
-    <None Include="Assets\materials\BehindTheWallMask.shader" />
+    <None Include="Assets\materials\BehindTheWall\BehindTheWallMask.shader" />
+    <None Include="Assets\materials\BehindTheWall\BehindTheWallUseDepthTexture.shader" />
     <None Include="Assets\materials\mirror.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
