--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -481,6 +481,7 @@
     <None Include="Assets\Water\fetchWaveData.shader" />
     <None Include="Assets\Water\fetchWaveDataMirror.shader" />
     <None Include="Assets\Water\wave.shader" />
+    <None Include="Assets\materials\BehindTheWall\BehindTheWall.shader" />
     <None Include="Assets\materials\BehindTheWall\BehindTheWallMask.shader" />
     <None Include="Assets\materials\BehindTheWall\BehindTheWallUseDepthTexture.shader" />
     <None Include="Assets\materials\mirror.shader" />
