--- a/PlanetCamera.csproj
+++ b/PlanetCamera.csproj
@@ -379,6 +379,7 @@
     <Compile Include="Assets\scripts\GravityGenerator\MeshGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlaneGravityGenerator.cs" />
     <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
+    <Compile Include="Assets\scripts\GravityGenerator\TestGravityGenerator.cs" />
     <Compile Include="Assets\scripts\help\AlignPlanetCenter.cs" />
     <Compile Include="Assets\scripts\help\MeasuringJumpHeight.cs" />
     <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
