--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\DiyTerrain\Dot.cs" />
+     <Compile Include="Assets\DiyTerrain\DrawMeshAABB.cs" />
+     <Compile Include="Assets\DiyTerrain\ShowMeshBound.cs" />
+     <Compile Include="Assets\DiyTerrain\SphereTerrain.cs" />
+     <Compile Include="Assets\DiyTerrain\SphereTerrainPiece.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\TrackballAttribute.cs" />
@@ -168,16 +173,12 @@
      <Compile Include="Assets\scripts\Tool\BehindTheWall\RenderBehindTheWallCommandBuffer.cs" />
      <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
      <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
-     <Compile Include="Assets\scripts\Tool\DrawMeshAABB.cs" />
      <Compile Include="Assets\scripts\Tool\GeometryTool.cs" />
      <Compile Include="Assets\scripts\Tool\MultiplayerCameraManager.cs" />
      <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
      <Compile Include="Assets\scripts\Tool\RayPeaker.cs" />
      <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
-     <Compile Include="Assets\scripts\Tool\ShowMeshBound.cs" />
      <Compile Include="Assets\scripts\Tool\SlopeForceMonitor.cs" />
-     <Compile Include="Assets\scripts\Tool\SphereTerrain.cs" />
-     <Compile Include="Assets\scripts\Tool\SphereTerrainPiece.cs" />
      <Compile Include="Assets\scripts\Tool\TheTopOne.cs" />
      <Compile Include="Assets\scripts\Tool\UsingAnimator.cs" />
      <Compile Include="Assets\test\NormalMapAxis.cs" />
@@ -193,6 +194,7 @@
      <None Include="Assets\PostProcessing\Editor Resources\Monitors\ParadeRender.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\LutGen.shader" />
      <None Include="Assets\materials\BehindTheWall\BehindTheWallMask.shader" />
+     <None Include="Assets\DiyTerrain\shaders\Dot.shader" />
      <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramRender.shader" />
      <None Include="Assets\Water\Test\NewSurfaceShader.shader" />
      <None Include="Assets\PostProcessing\Editor Resources\UI\CurveBackground.shader" />
@@ -204,7 +206,7 @@
      <None Include="Assets\PostProcessing\Resources\Shaders\Tonemapping.cginc" />
      <None Include="Assets\PostProcessing\Editor Resources\Monitors\HistogramCompute.compute" />
      <None Include="Assets\Water\fetchWaveDataMirror.shader" />
-     <None Include="Assets\scripts\shaders\ToSphere.shader" />
+     <None Include="Assets\DiyTerrain\shaders\ToSphere.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\Uber.shader" />
      <None Include="Assets\PostProcessing\Resources\Shaders\Blit.shader" />
      <None Include="Assets\PostProcessing\Editor Resources\Monitors\WaveformRender.shader" />
