--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\DiyTerrain\SphereTerrain.cs" />
      <Compile Include="Assets\DiyTerrain\SphereTerrainBrushController.cs" />
      <Compile Include="Assets\DiyTerrain\SphereTerrainPiece.cs" />
+     <Compile Include="Assets\DiyTerrain\Stitching.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\GetSetAttribute.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\MinAttribute.cs" />
      <Compile Include="Assets\PostProcessing\Runtime\Attributes\TrackballAttribute.cs" />
