--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -116,6 +116,7 @@
      <Compile Include="Assets\scripts\Test\TestRotationAxis.cs" />
      <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineInitWait.cs" />
      <Compile Include="Assets\scripts\Shared\SharedTool.cs" />
+     <Compile Include="Assets\scripts\EndlessCorridor\DrawInstance.cs" />
      <Compile Include="Assets\scripts\Machine\EnableAirCableCarMotor.cs" />
      <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
      <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
@@ -129,9 +130,6 @@
      <Compile Include="Assets\DiyTerrain\ShowMeshBound.cs" />
      <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
      <Compile Include="Assets\scripts\Factoryplugin\AddScalable.cs" />
-     <Compile Include="Assets\scripts\EndlessCorridor\DrawInstance.cs" />
-     <None Include="Assets\materials\BehindTheWall\BehindTheWallMask.shader" />
-     <None Include="Assets\materials\BehindTheWall\BehindTheWallUseMaskAndDepthTexture.shader" />
      <None Include="Assets\DiyTerrain\shaders\ToSpherePBR.shader" />
      <None Include="Assets\DiyTerrain\shaders\brush\brush_fill.shader" />
      <None Include="Assets\DiyTerrain\shaders\brush\StitchingDown.shader" />
@@ -143,7 +141,6 @@
      <None Include="Assets\materials\BehindTheWall\BehindTheWall.shader" />
      <None Include="Assets\fbx\ColorInstance.shader" />
      <None Include="Assets\materials\mirror.shader" />
-     <None Include="Assets\materials\BehindTheWall\BehindTheWallUseMask.shader" />
      <None Include="Assets\Water\fetchWaveDataMirror.shader" />
      <None Include="Assets\Water\wave.shader" />
      <None Include="Assets\DiyTerrain\shaders\brush\StitchingRight.shader" />
@@ -815,6 +812,42 @@
     </Reference>
     <Reference Include="UnityEngine.Advertisements.Editor">
         <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\UnityEngine.Advertisements.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Shaders">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Runtime">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Searcher.Editor">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Editor">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Mathematics.Editor">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.Editor">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Mathematics">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.Mathematics.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ShaderGraph.Editor">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.ShaderGraph.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.RenderPipelines.Universal.Runtime">
+        <HintPath>C:\MyProj\PlanetCamera\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
