--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -42,6 +42,7 @@
      <Compile Include="Assets\scripts\GravityGenerator\GroundGravityGenerator.cs" />
      <Compile Include="Assets\DiyTerrain\SphereTerrain.cs" />
      <Compile Include="Assets\Water\AnimateWave.cs" />
+     <Compile Include="Assets\prefab\Bike\Bike.cs" />
      <Compile Include="Assets\scripts\AnimationState\Finn\OnAirState.cs" />
      <Compile Include="Assets\scripts\Tool\GeometryTool.cs" />
      <Compile Include="Assets\scripts\GravityGenerator\CreateGravitySensor.cs" />
@@ -130,7 +131,7 @@
      <Compile Include="Assets\DiyTerrain\Brush.cs" />
      <Compile Include="Assets\DiyTerrain\ShowMeshBound.cs" />
      <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
-     <Compile Include="Assets\prefab\Bike\Bike.cs" />
+     <Compile Include="Assets\prefab\Bike\ManyBike.cs" />
      <None Include="Assets\DiyTerrain\shaders\ToSphere.shader" />
      <None Include="Assets\DiyTerrain\shaders\ToSpherePBR.shader" />
      <None Include="Assets\DiyTerrain\shaders\brush\brush_fill.shader" />
