--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -43,34 +43,34 @@
      <Compile Include="Assets\Pack\DiyTerrain\Script\SphereTerrain.cs" />
      <Compile Include="Assets\Pack\Water\scripts\AnimateWave.cs" />
      <Compile Include="Assets\Prefab\Bike\Bike.cs" />
-     <Compile Include="Assets\scripts\AnimationState\Finn\OnAirState.cs" />
+     <Compile Include="Assets\Prefab\Character\Finn\OnAirState.cs" />
      <Compile Include="Assets\scripts\Tool\GeometryTool.cs" />
      <Compile Include="Assets\scripts\GravityGenerator\CreateGravitySensor.cs" />
-     <Compile Include="Assets\scripts\Machine\GroundTypeSetter.cs" />
+     <Compile Include="Assets\scripts\Level\GroundTypeSetter.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\DrawHeightCamera.cs" />
-     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxFinal.cs" />
-     <Compile Include="Assets\scripts\Machine\DestoryGameObject.cs" />
+     <Compile Include="Assets\Prefab\machine\QBox\Script\QBoxFinal.cs" />
+     <Compile Include="Assets\scripts\Level\DestoryGameObject.cs" />
      <Compile Include="Assets\scripts\GravityGenerator\GravityField.cs" />
      <Compile Include="Assets\Pack\Water\scripts\WaterRange.cs" />
      <Compile Include="Assets\scripts\Factoryplugin\FourtyFiveDegree.cs" />
-     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxDoScale.cs" />
-     <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineWaitAtOriginal.cs" />
+     <Compile Include="Assets\Prefab\machine\QBox\Script\QBoxDoScale.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineWaitAtOriginal.cs" />
      <Compile Include="Assets\Pack\WaterPark\WaterTrigger.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\DrawMeshAABB.cs" />
      <Compile Include="Assets\scripts\MoveForceMonitor\MoveForceSetting.cs" />
      <Compile Include="Assets\scripts\Factoryplugin\CreateLinedUp.cs" />
      <Compile Include="Assets\scripts\Tool\TheTopOne.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\SphereTerrainBrushController.cs" />
-     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorManager.cs" />
+     <Compile Include="Assets\Prefab\EndlessCorridor\EndlessCorridorManager.cs" />
      <Compile Include="Assets\Pack\WaterPark\WaterParkManager.cs" />
      <Compile Include="Assets\Pack\Test\PeekTanget\scripts\RotateByAxis2.cs" />
      <Compile Include="Assets\scripts\Tool\SlopeForceMonitor.cs" />
-     <Compile Include="Assets\scripts\Machine\MovingPlatform.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MovingPlatform.cs" />
      <Compile Include="Assets\Pack\BehindTheWall\RenderBehindTheWallCommandBuffer.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\Stitching.cs" />
      <Compile Include="Assets\scripts\MoveForceMonitor\MoveForceParameterRepository.cs" />
      <Compile Include="Assets\scripts\DrawInstance.cs" />
-     <Compile Include="Assets\scripts\Machine\EnableAirCableCarMotor.cs" />
+     <Compile Include="Assets\scripts\Level\EnableAirCableCarMotor.cs" />
      <Compile Include="Assets\scripts\Tool\AvatarSync.cs" />
      <Compile Include="Assets\scripts\Controller\RigidbodyWrapper.cs" />
      <Compile Include="Assets\Pack\Test\PeekTanget\scripts\RotateByAxis.cs" />
@@ -78,50 +78,50 @@
      <Compile Include="Assets\scripts\Controller\SurfaceFollowHelper.cs" />
      <Compile Include="Assets\scripts\GravityGenerator\TorusGravityGenerator.cs" />
      <Compile Include="Assets\Pack\Test\PeekTanget\scripts\NormalMapAxis.cs" />
-     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorTriggerBox.cs" />
-     <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineWaitAtTarget.cs" />
+     <Compile Include="Assets\Prefab\EndlessCorridor\EndlessCorridorTriggerBox.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineWaitAtTarget.cs" />
      <Compile Include="Assets\scripts\Controller\PlanetPlayerController.cs" />
-     <Compile Include="Assets\scripts\Machine\PosFollow.cs" />
-     <Compile Include="Assets\scripts\Machine\Door.cs" />
+     <Compile Include="Assets\scripts\Level\PosFollow.cs" />
+     <Compile Include="Assets\scripts\Level\Door.cs" />
      <Compile Include="Assets\scripts\Shared\TagDefined.cs" />
      <Compile Include="Assets\Pack\Test\PeekTanget\scripts\PeekGeo.cs" />
      <Compile Include="Assets\Pack\Test\Rotation\TestRotationEularAngle.cs" />
-     <Compile Include="Assets\scripts\Machine\QuestionBox.cs" />
+     <Compile Include="Assets\Prefab\machine\QBox\Script\QuestionBox.cs" />
      <Compile Include="Assets\scripts\Controller\StandingController.cs" />
      <Compile Include="Assets\scripts\Tool\UsingAnimator.cs" />
-     <Compile Include="Assets\scripts\Machine\DoRotation.cs" />
+     <Compile Include="Assets\scripts\Level\DoRotation.cs" />
      <Compile Include="Assets\Pack\WaterPark\WaterHeightSetter.cs" />
-     <Compile Include="Assets\scripts\Machine\DisalbeAirCableMotor.cs" />
-     <Compile Include="Assets\scripts\Machine\Domino\DominoSpwan.cs" />
+     <Compile Include="Assets\scripts\Level\DisalbeAirCableMotor.cs" />
+     <Compile Include="Assets\scripts\Level\DominoSpwan.cs" />
      <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
-     <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineBack2Original.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineBack2Original.cs" />
      <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
      <Compile Include="Assets\Pack\BehindTheWall\RenderBehindTheWall.cs" />
      <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
-     <Compile Include="Assets\scripts\AnimationState\QBox\QBoxReady.cs" />
+     <Compile Include="Assets\Prefab\machine\QBox\Script\QBoxReady.cs" />
      <Compile Include="Assets\scripts\help\AlignPlanetCenter.cs" />
      <Compile Include="Assets\scripts\Tool\RayPeaker.cs" />
      <Compile Include="Assets\Pack\Water\scripts\AnimateEmissive.cs" />
      <Compile Include="Assets\Pack\BehindTheWall\RenderBehindTheWallCamera.cs" />
      <Compile Include="Assets\scripts\help\MeasuringJumpHeight.cs" />
-     <Compile Include="Assets\scripts\Machine\RecordPositionDiff.cs" />
-     <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineMove2Target.cs" />
-     <Compile Include="Assets\scripts\Machine\CoroutineMove.cs" />
-     <Compile Include="Assets\scripts\EndlessCorridor\Scalable.cs" />
+     <Compile Include="Assets\scripts\Level\RecordPositionDiff.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineMove2Target.cs" />
+     <Compile Include="Assets\scripts\Level\CoroutineMove.cs" />
+     <Compile Include="Assets\Prefab\EndlessCorridor\Scalable.cs" />
      <Compile Include="Assets\scripts\Input\PCInput.cs" />
      <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
      <Compile Include="Assets\Prefab\machine\Portal\SyncCamera.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\SphereTerrainPiece.cs" />
-     <Compile Include="Assets\scripts\Machine\SinMove.cs" />
+     <Compile Include="Assets\scripts\Level\SinMove.cs" />
      <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
-     <Compile Include="Assets\scripts\Machine\SetParent.cs" />
+     <Compile Include="Assets\scripts\Level\SetParent.cs" />
      <Compile Include="Assets\Pack\Test\Collision\TestOnCollisionEnterPrintSelf.cs" />
      <Compile Include="Assets\scripts\Factory\CreatePlayer.cs" />
-     <Compile Include="Assets\scripts\Machine\Domino\Domino.cs" />
+     <Compile Include="Assets\scripts\Level\Domino.cs" />
      <Compile Include="Assets\scripts\Input\JoyStickControlPanel.cs" />
-     <Compile Include="Assets\scripts\EndlessCorridor\EndlessCorridorHolder.cs" />
+     <Compile Include="Assets\Prefab\EndlessCorridor\EndlessCorridorHolder.cs" />
      <Compile Include="Assets\Pack\Test\Rotation\TestRotationAxis.cs" />
-     <Compile Include="Assets\scripts\AnimationState\MovePlatform\MoveMachineInitWait.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineInitWait.cs" />
      <Compile Include="Assets\scripts\Shared\SharedTool.cs" />
      <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
      <Compile Include="Assets\Pack\Test\Collision\TestOnCollisionEnterPrintCollision.cs" />
